fixed spacing on trip list page

--- a/src/styles/TripListPage.css
+++ b/src/styles/TripListPage.css
@@ -17,5 +17,5 @@
 }
 
 .container {
-  margin: 0;
+  /* margin: 0; */
 }
